[package]

	name    = "ekke_config"
	version = "0.1.0"
	authors = ["Naja Melan <najamelan@autistici.org>"]
	edition = "2018"


[dependencies]

	failure      = "0.1.5"
	serde        = { version = "1.0.88", features = ["derive"] }
	serde_yaml   = "0.8.8"

	ekke_merge   = { path = "../ekke_merge", features = [ "serdeyaml" ] }
